# transcriptional-bursting

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: test-and-lint.yml
notebooks/: poisson_model_demo.ipynb
src/burst_models/: negbin_model.py  poisson_model.py  utils.py
tests/: test_negbin_model.py  test_poisson_model.py  test_utils.py
