[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "burst-models"
dynamic = ["version"]
description = "Mathematical modeling of transcriptional bursting via Poisson and Negative Binomial compound processes"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = ["numpy >= 1.21", "scipy >= 1.7"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "flake8==5.0.4",
    "mypy",
    "importlib-metadata<4.3", # for Python < 3.8
    "setuptools-scm",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --tb=short"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
files = ["src"]
strict = true

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist"]
